log
Fri 12 Aug 2022 12:50:32 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:17: error: expected ‘;’, ‘,’ or ‘)’ before ‘.’ token
   62 |   strcpy(Persona.nombre,"")
      |                 ^
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dc5114c
